src/components/Column/Column.scss
@import "src/constants/style";

.column {
  min-width: $column__min-width;
  width: 100%;
  max-width: $column__max-width;
  @include inset-border($top: true, $bottom: true);
  padding-top: $header__height;
  height: 100vh;
  display: flex;
}
.column__moderation-isActive {
  @include inset-border($top: true, $bottom: true, $color: $color-goal-green);
}
.column:nth-child(odd) {
  background-color: $color-white-one;
}
.column:nth-child(even) {
  background-color: $color-white-two;
}
[theme="dark"] {
  .column:nth-child(even) {
    background-color: $color-dark-one;
  }
  .column:nth-child(odd) {
    background-color: $color-dark-two;
  }
}

.column__content {
  max-height: 100%;
  padding: $padding--large 0 $column__border-width 0;
  display: flex;
  flex-direction: column;
  flex: 1;
  ::selection {
    background-color: rgba(var(--accent-color-rgb), 0.5);
  }
}

.column__header {
  padding: 0 $padding--large;
}

.column__header-title {
  display: flex;
  word-break: break-all;
  align-items: center;
  margin-bottom: $margin--default;
  position: relative;
}

.column__header-text-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: auto;
  height: 100%;
  border-bottom: solid 3px var(--accent-color);
  margin: 0 $margin--small 0 0;
}

.column__header-text-wrapper--hidden {
  border-bottom-style: dashed;
}

.column__header-text {
  font-size: calc(18px + 0.4vw);
  margin: 0;
  font-weight: bold;
  letter-spacing: $letter-spacing--large;
  line-height: $line-height--large;
}

.column__header-text--visible {
  color: $color-black;
}

.column__header-text--hidden {
  color: $color-middle-gray;
}

.column__header-input {
  display: inline-block;
  border: none;
  font-size: calc(18px + 0.4vw);
  color: $color-black;
  border-bottom: solid 3px var(--accent-color);
  margin: $margin--default $margin--small $margin--default 0;
  font-weight: bold;
  letter-spacing: $letter-spacing--large;
  line-height: $line-height--large;
  background-color: transparent;
  padding: 0;
  outline: none;
  max-width: 300px;
  width: 50%;
}
[theme="dark"] {
  .column__header-input {
    color: $color-white;
  }
}

.column__header-card-number {
  margin-bottom: $margin--default;
  font-size: 20px;
  color: $color-middle-gray;
  font-weight: 600;
  letter-spacing: $letter-spacing--large;
  line-height: $line-height--large;
}

.column__notes-wrapper {
  overflow: auto;
  border-radius: 16px;
  border: 2px dashed transparent;
  transition: all 0.25s ease-in-out;
  flex: 1;
  margin-top: $margin--small;
  scrollbar-width: 10px;
  scrollbar-color: $color-middle-gray $color-white;

  @include scrollbar();
}

.column__notes-wrapper--isOver {
  border-color: var(--accent-color);
  background-color: rgba(var(--accent-color-rgb), 0.2);
}

.column__note-list {
  margin: 0;
  padding: 0 $padding--large $padding--default $padding--large;
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 20px;
  grid-column-gap: 24px;
  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
}
[column-visibility="collapsed"] .column__note-list {
  padding-bottom: 72px;
}

.column__header-toggle {
  display: flex;
  align-items: center;
}
.column__header-toggle:first-of-type {
  margin-left: auto;
}

.column__header-toggle-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
}
.column__header-toggle-button:focus > .column__header-toggle-button-icon,
.column__header-toggle-button:hover > .column__header-toggle-button-icon {
  animation: none;
  color: var(--accent-color);
}

.column__header-toggle-button-icon {
  color: $color-black;
  width: 24px;
}
.column__edit-icon {
  width: 20px;
}
.column__submit-icon {
  width: 28px;
}
.column__reset-icon {
  width: 32px;
}

[theme="dark"] {
  .column__header-text--visible {
    color: $color-white;
  }
  .column__header-toggle-button-icon {
    color: $color-white;
  }
  .column__notes-wrapper {
    scrollbar-color: $color-darkest-gray $color-dark-mode-note;
  }
}

.column__header-hidden-icon {
  height: 20px;
  margin: 0 $margin--small 0 0;
  color: $color-middle-gray;
  cursor: pointer;
}

.column__header-hidden-icon:hover {
  color: $color-black;
}

[theme="dark"] {
  .column__header-hidden-icon:hover {
    color: $color-white;
  }
}

.column__header-edit-button {
  height: 24px;
  margin: auto calc(#{$margin--default} - 2px) auto 0; // Align with note-input__icon
  background-color: transparent;
  border: none;
  cursor: pointer;
  outline: none;
  padding: 0;
  border-radius: 4px;
  &:hover,
  &:focus {
    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
  }
}
.column__header-edit-button:first-of-type {
  margin-left: auto;
}
.column__header-edit-button-icon {
  color: $color-black;
  height: 24px;
}
[theme="dark"] .column__header-edit-button-icon {
  color: $color-white;
}

